Fix json formatting

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "react-dom": "^15.6.1"
   },
   "scripts": {
-    "dev": "next,
+    "dev": "next",
     "build": "next build",
     "start": "next start"
   }
