--- a/package.json
+++ b/package.json
@@ -3,14 +3,24 @@
     "isomorphic-fetch": "^2.2.1",
     "next": "^3.2.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "babel-plugin-inline-react-svg": "^0.4.0"    
   },
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
-    "babel-plugin-inline-react-svg": "^0.4.0"
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.3",
+    "prettier": "^1.7.4"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --single-quote --no-semi --write",
+      "git add"
+    ]
   }
 }
