--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "dependencies": {
+    "babel-plugin-inline-react-svg": "^0.4.0",
     "isomorphic-fetch": "^2.2.1",
-    "next": "^3.2.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "babel-plugin-inline-react-svg": "^0.4.0"    
+    "next": "^4.0.3",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
   "scripts": {
     "dev": "next",
