--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "babel-plugin-inline-react-svg": "^0.4.0",
     "escape-html": "^1.0.3",
-    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^2.0.0",
     "next": "^4.0.3",
     "react": "^16.0.0",
     "react-dom": "^16.0.0"
