--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "isomorphic-unfetch": "^2.0.0",
     "next": "^4.2.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-markdown": "^3.1.0"
   },
   "devDependencies": {
     "husky": "^0.14.3",
