--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^4.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-gravatar": "^2.6.3",
     "react-markdown": "^3.1.0"
   },
   "devDependencies": {
