--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "escape-html": "^1.0.3",
     "express": "^4.16.2",
     "isomorphic-unfetch": "^2.0.0",
+    "lscache": "^1.1.0",
     "next": "^4.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
