--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "escape-html": "^1.0.3",
     "express": "^4.16.2",
     "isomorphic-unfetch": "^2.0.0",
+    "lodash.debounce": "^4.0.8",
     "lscache": "^1.1.0",
+    "mitt": "^1.1.3",
     "next": "^4.2.0",
+    "nprogress": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-gravatar": "^2.6.3"
