--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --single-quote --no-semi --write",
-      "git add"
-    ]
+    "*.js": ["prettier --write", "git add"]
   },
   "dependencies": {
     "babel-plugin-inline-react-svg": "^0.5.2",
@@ -35,5 +32,9 @@
     "husky": "^0.14.3",
     "lint-staged": "^7.0.0",
     "prettier": "^1.9.1"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "semi": false
   }
 }
