Changed name and made private

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hyper-plugins",
+  "name": "hyper-site",
+  "private": true,
   "version": "1.0.0",
   "description": "A directory of Hyper plugins and themes",
   "repository": "git@github.com:zeit/hyper-plugins.git",
