--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hyper-site",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The official website for the Hyper terminal",
   "repository": "zeit/hyper-site",
   "license": "MIT",
@@ -12,7 +12,10 @@
     "precommit": "lint-staged"
   },
   "lint-staged": {
-    "*.js": ["prettier --write", "git add"]
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
   },
   "dependencies": {
     "babel-plugin-inline-react-svg": "^0.5.2",
