--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "repository": "zeit/hyper-site",
   "license": "MIT",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "micro server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "NODE_ENV=production micro server.js",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -20,13 +20,14 @@
   "dependencies": {
     "babel-plugin-inline-react-svg": "^0.5.2",
     "escape-html": "^1.0.3",
-    "express": "^4.16.2",
     "isomorphic-unfetch": "^2.0.0",
     "lodash.debounce": "^4.0.8",
     "lscache": "^1.1.0",
+    "micro": "^9.1.4",
     "mitt": "^1.1.3",
     "next": "^5.1.0",
     "nprogress": "^0.2.0",
+    "path-match": "^1.2.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-gravatar": "^2.6.3",
