--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "babel-plugin-inline-react-svg": "^1.0.1",
     "escape-html": "^1.0.3",
+    "giturl": "^1.0.1",
     "isomorphic-unfetch": "^3.0.0",
     "lodash.debounce": "^4.0.8",
     "lscache": "^1.3.0",
