--- a/now.json
+++ b/now.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
   "alias": ["hyper.is", "www.hyper.is"],
-  "builds": [{"src": "package.json", "use": "@now/next"}]
+  "builds": [{"src": "package.json", "use": "@now/next"}],
+  "routes": [
+    {"src": "/plugins/(?<id>[^/]*)$", "dest": "/plugin?id=$id"},
+    {"src": "/plugins/(?<id>[^/]*)/source$", "dest": "/source?id=$id"},
+    {"src": "(.*)", "dest": "$1"}
+  ]
 }
