--- a/now.json
+++ b/now.json
@@ -3,7 +3,7 @@
   "alias": ["hyper.is", "www.hyper.is"],
   "builds": [{"src": "package.json", "use": "@now/next"}],
   "routes": [
-    {"src": "/plugins/(?<id>[^/]*)$", "dest": "/plugin?id=$id"},
+    {"src": "/plugins/(?<id>[^/]+)$", "dest": "/plugin?id=$id"},
     {"src": "/plugins/(?<id>[^/]*)/source$", "dest": "/source?id=$id"},
     {"src": "(.*)", "dest": "$1"}
   ]
