--- a/now.json
+++ b/now.json
@@ -1,4 +1,10 @@
 {
-  "version": 1,
-  "alias": ["hyper.is", "www.hyper.is"]
+  "version": 2,
+  "alias": ["hyper.is", "www.hyper.is"],
+  "builds": [{"src": "package.json", "use": "@now/next"}],
+  "routes": [
+    {"src": "/plugins/(?<id>[^/]+)$", "dest": "/plugin?id=$id"},
+    {"src": "/plugins/(?<id>[^/]+)/source$", "dest": "/source?id=$id"},
+    {"src": "(.*)", "dest": "$1"}
+  ]
 }
