--- a/now.json
+++ b/now.json
@@ -3,8 +3,9 @@
   "alias": ["hyper.is", "www.hyper.is"],
   "builds": [{"src": "package.json", "use": "@now/next"}],
   "routes": [
+    {"src": "/(.*)/$", "status": 301, "headers": { "Location": "/$1"} },
     {"src": "/plugins/(?<id>[^/]+)$", "dest": "/plugin?id=$id"},
     {"src": "/plugins/(?<id>[^/]+)/source$", "dest": "/source?id=$id"},
-    {"src": "(.*)", "dest": "$1"}
+    {"src": "/(.*)", "dest": "/$1"}
   ]
 }
