--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     ]
   },
   "dependencies": {
+    "@mdx-js/mdx": "^0.16.6",
+    "@zeit/next-mdx": "^1.2.0",
     "babel-plugin-inline-react-svg": "^1.0.1",
     "escape-html": "^1.0.3",
     "isomorphic-unfetch": "^3.0.0",
