--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "lscache": "^1.3.0",
     "micro": "^9.3.3",
     "mitt": "^1.1.3",
-    "next": "^8.1.1-canary.25",
+    "next": "^9.0.4",
     "nprogress": "^0.2.0",
     "path-match": "^1.2.4",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "react-gravatar": "^2.6.3",
     "react-highlighter": "^0.4.3"
   },
