Moved the source page to a dynamic route

--- a/now.json
+++ b/now.json
@@ -3,9 +3,7 @@
   "alias": ["hyper.is"],
   "builds": [{ "src": "package.json", "use": "@now/next@canary" }],
   "routes": [
-    { "src": "/(.*)/$", "status": 301, "headers": { "Location": "/$1" } },
-    { "src": "/plugins/(?<id>[^/]+)/source$", "dest": "/source?id=$id" },
-    { "src": "/(.*)", "dest": "/$1" }
+    { "src": "/(.*)/$", "status": 301, "headers": { "Location": "/$1" } }
   ],
   "env": {
     "GITHUB_TOKEN": "@hyper-github-auth-token"
