--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
   "repository": "zeit/hyper-site",
   "license": "MIT",
   "scripts": {
-    "dev": "micro server.js",
+    "dev": "next",
     "build": "next build",
-    "now-build": "next build",
-    "start": "NODE_ENV=production micro server.js"
+    "start": "next start"
   },
   "husky": {
     "hooks": {
@@ -34,7 +33,6 @@
     "mitt": "^1.1.3",
     "next": "^9.0.4",
     "nprogress": "^0.2.0",
-    "path-match": "^1.2.4",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-gravatar": "^2.6.3",
