--- a/now.json
+++ b/now.json
@@ -1,14 +1,10 @@
 {
   "version": 2,
   "alias": ["hyper.is"],
-  "builds": [{"src": "package.json", "use": "@now/next@canary"}],
-  "routes": [
-    {"src": "/(.*)/$", "status": 301, "headers": { "Location": "/$1"} },
-    {"src": "/plugins/(?<id>[^/]+)$", "dest": "/plugin?id=$id"},
-    {"src": "/plugins/(?<id>[^/]+)/source$", "dest": "/source?id=$id"},
-    {"src": "/(.*)", "dest": "/$1"}
-  ],
   "env": {
     "GITHUB_TOKEN": "@hyper-github-auth-token"
-  }
+  },
+  "routes": [
+    { "src": "/(.*)/$", "status": 301, "headers": { "Location": "/$1" } }
+  ]
 }
