--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mdx-js/react": "^1.3.1",
     "@next/mdx": "^9.3.2",
     "next": "^9.3.2",
+    "nprogress": "^0.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-gravatar": "^2.6.3",
