--- a/package.json
+++ b/package.json
@@ -6,25 +6,11 @@
   "repository": "zeit/hyper-site",
   "license": "MIT",
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "git add"
-    ]
-  },
   "dependencies": {
-    "@mdx-js/loader": "^1.5.8",
-    "@mdx-js/react": "^1.3.1",
-    "@next/mdx": "^9.3.4",
     "next": "^9.3.4",
     "nprogress": "^0.2.0",
     "react": "^16.13.1",
@@ -34,8 +20,6 @@
     "swr": "^0.2.0"
   },
   "devDependencies": {
-    "husky": "^4.2.3",
-    "lint-staged": "^10.1.1",
     "prettier": "^2.0.2"
   },
   "prettier": {
