--- a/now.json
+++ b/now.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
+  "alias": ["hyper.is"],
   "routes": [
     { "src": "/(.*)/$", "status": 301, "headers": { "Location": "/$1" } }
   ]
