--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next/mdx": "^9.4.2",
     "copee": "^1.0.6",
     "husky": "^4.2.5",
+    "image-size": "^0.9.3",
     "lint-staged": "^10.2.3",
     "next": "^10.0.3",
     "nprogress": "^0.2.0",
