--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "@next/mdx": "^9.4.2",
     "copee": "^1.0.6",
     "husky": "^4.2.5",
+    "image-size": "^0.9.3",
     "lint-staged": "^10.2.3",
-    "next": "^9.4.2",
+    "next": "^10.0.3",
     "nprogress": "^0.2.0",
-    "react": "^16.13.1",
+    "react": "^17.0.1",
     "react-dom": "^16.13.1",
     "react-gravatar": "^2.6.3",
     "react-highlighter": "^0.4.3"
