--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
-    "build": "./generate-plugin-images-metadata.js && next build",
+    "build": "node generate-plugin-images-metadata.js && next build",
     "start": "next start"
   },
   "dependencies": {
